new file:   assets/images/SECURE P.jpg 	new file:   assets/images/bg-img.jpg 	new file:   assets/images/img.jpg 	new file:   assets/images/money-bag.png 	new file:   assets/images/money.jpg 	new file:   assets/images/money2.jpg 	new file:   assets/images/offer&gifts.jpg 	new file:   assets/images/secure payments.jpg 	modified:   assets/styles/Dish.css 	modified:   assets/styles/hero.css 	modified:   assets/styles/navbar.css 	modified:   pages/About.html 	modified:   pages/Contact.html 	modified:   pages/Menu.html 	modified:   pages/index.html 	modified:   assets/styles/style.css 	modified:   pages/About.html 	modified:   pages/Contact.html 	modified:   pages/Menu.html 	modified:   pages/index.html 	assets/images/Crispy Pata.jpg 	assets/images/Filipino.webp 	assets/images/christian.jpg 	assets/images/daing.jpeg 	assets/images/daing.jpg 	assets/images/embutido.jpg 	assets/images/emman.jpg 	assets/images/escabetche.jpg 	assets/images/escabetche.webp 	assets/images/inun unan.jpg 	assets/images/janlo.jpg 	assets/images/letchgon.jpg 	assets/images/letchon.jpg 	assets/images/miguel.jpg 	assets/images/payment.jpg 	assets/images/sergs.jpg 	assets/styles/about.css 	assets/styles/contact.css 	assets/styles/footer.css 	assets/styles/reviews.css 	assets/styles/submission.css 	pages/Reviews.html 	pages/submission.html

--- a/pages/index.html
+++ b/pages/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Cooking Restaurant</title>
+    <title> Filipino Style Restaurant</title>
     <link rel="stylesheet" href="../assets/styles/style.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="#" class="logo">Cooking Master</a>
+            <a href="#" class="logo">Wow Pare Sarap!!!</a>
         <div class="hamburger">
             <input type="checkbox" id="menu-toggle" class="menu-toggle" />
             <label for="menu-toggle" class="menu-btn">☰</label>
         <ul class="nav-links">
-            <li><a href="./pages/index.html">Home</a></li>
-            <li><a href="/pages/About.html">About</a></li>
-            <li><a href="./pages/Menu.html">Menu</a></li>
-            <li><a href="./pages/Pages.html">Pages</a></li>
-            <li><a href="./pages/Contact.html">Contact</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./About.html">About</a></li>
+            <li><a href="./Menu.html">Menu</a></li>
+            <li><a href="./Pages.html">Pages</a></li>
+            <li><a href="./Contact.html">Contact</a></li>
         </ul>
         </div>
     </nav>
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Best food for<br>your taste</h1>
-                <p>Discover delectable cusine and unforgetable moments in our welcoming, culinary haven</p>
+                <p>Discover Filipino delectable cusine and unforgetable moments in our welcoming, culinary haven</p>
                 </p>
                 <div class="hero-btns">
                 <a href="#" class="btn">Book a Table</a>
@@ -58,6 +58,46 @@
             </div>
         </div>
     </section>
+   </section>
+
+   <!--Icon section-->
+   <section class="icon-container">
+
+    <div class="icons">
+        <img src="../assets/images/img.jpg" alt="">
+        <div class="info">
+            <h3>Free Shipping</h3>
+            <span>On all orders</span>
+        </div>
+
+    </div>
+
+    <div class="icons">
+        <img src="../assets/images/money.jpg" alt="">
+        <div class="info">
+            <h3>3days refund</h3>
+            <span>moneyback garantee</span>
+        </div>
+
+    </div>
+
+    <div class="icons">
+        <img src="../assets/images/offer&gifts.jpg" alt="">
+        <div class="info">
+            <h3>Offer & Gifts</h3>
+            <span>On all orders</span>
+        </div>
+
+    </div>
+
+    <div class="icons">
+        <img src="../assets/images/SECURE P.jpg" alt="">
+        <div class="info">
+            <h3>Secure Payments</h3>
+            <span>Protected by Paypa</span>
+        </div>
+
+    </div>
    </section>
 </body>
 </html>
