new file:   assets/images/Crispy Pata.jpg 	new file:   assets/images/Filipino.webp 	new file:   assets/images/christian.jpg 	new file:   assets/images/daing.jpeg 	new file:   assets/images/daing.jpg 	new file:   assets/images/embutido.jpg 	new file:   assets/images/emman.jpg 	new file:   assets/images/escabetche.jpg 	new file:   assets/images/escabetche.webp 	new file:   assets/images/inun unan.jpg 	new file:   assets/images/janlo.jpg 	new file:   assets/images/letchgon.jpg 	new file:   assets/images/letchon.jpg 	new file:   assets/images/miguel.jpg 	new file:   assets/images/payment.jpg 	new file:   assets/images/sergs.jpg 	new file:   assets/styles/about.css 	new file:   assets/styles/contact.css 	deleted:    assets/styles/food.css 	new file:   assets/styles/footer.css 	new file:   assets/styles/reviews.css 	deleted:    assets/styles/row.css 	modified:   assets/styles/style.css 	new file:   assets/styles/submission.css 	modified:   pages/About.html 	modified:   pages/Contact.html 	modified:   pages/Menu.html 	deleted:    pages/Pages.html 	new file:   pages/Reviews.html 	modified:   pages/index.html 	new file:   pages/submission.html

--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Cooking Restaurant</title>
     <link rel="stylesheet" href="../assets/styles/style.css">
-</head>
+
 <body>
     <nav class="navbar">
         <div class="container nav-container">
@@ -16,35 +16,90 @@
         <ul class="nav-links">
             <li><a href="./index.html">Home</a></li>
             <li><a href="./About.html">About</a></li>
-            <li><a href="../Menu.html">Menu</a></li>
-            <li><a href="./pages/Pages.html">Pages</a></li>
+            <li><a href="./Menu.html">Menu</a></li>
             <li><a href="./Contact.html">Contact</a></li>
         </ul>
         </div>
     </nav>
 
     <!--Hero Sectiom-->
-   <h1> Paul</h1>
+   <section class="foods" id="foods">
+    <h1 class="heading"> Main <span> Dishes</span></h1>
 
-    <!-- Dishes Section-->
-    <section class="Dish">
-        <div class="container">
-            <div class="dish-content">
-                <h1>Delicious Dishes</h1>
-                <div class="line"></div>
-            </div>
-            <div class="scroll-container">
-                <div class="wrapper">
-                <img src="./assets/images/adobo.jpg" alt="">
-                <img src="./assets/images/bihon.jpg" alt="">
-                <img src="./assets/images/inasal.jpg" alt="">
-                <img src="./assets/images/kaldereta.jpg" alt="">
-                <img src="./assets/images/sisig.jpg" alt="">
-            </div>
-            </div>
+    <div class="box-container">
+
+        <div class="box">
+            <span class="discount">-10%</span>
+            <div class="image">
+                <img src="">
             </div>
         </div>
-    </section>
+    </div>
    </section>
+
+    <!-- Dishes Section-->
+    <section class="menu">
+        <div class="box-container">
+            <div class="dish-content">
+                <h1> Menu Dishes</h1>
+                <div class="line"></div>
+            </div>
+            
+            <div class="box">
+                <div class="Names">-Crispy Pata</div>
+                <div class="image">
+                    <img src="../assets/images/Crispy Pata.jpg" alt="">
+                    <div class="icons">
+                    <div class="hero-btns">
+                <a href="#" class="btn btn-outline">add to meal</a>
+            </div>
+                </div>
+            </div>
+            </div>
+             <div class="box">
+                <div class="Names">Inun unan</div>
+                <div class="image">
+                    <img src="../assets/images/inun unan.jpg" alt="">
+                    <div class="icons">
+                    <div class="hero-btns">
+                <a href="#" class="btn btn-outline">add to meal</a>
+            </div>
+                </div>
+            </div>
+            </div>
+             <div class="box">
+                <div class="Names">Letchon</div>
+                <div class="image">
+                    <img src="../assets/images/letchon.jpg" alt="">
+                    <div class="icons">
+                    <div class="hero-btns">
+                <a href="#" class="btn btn-outline">add to meal</a>
+            </div>
+                </div>
+            </div>
+            </div>
+             <div class="box">
+                <div class="Names"> Escabetche</div>
+                <div class="image">
+                    <img src="../assets/images/escabetche.jpg" alt="">
+                    <div class="icons">
+                    <div class="hero-btns">
+                <a href="#" class="btn btn-outline">add to meal</a>
+            </div>
+                </div>
+            </div>
+            </div>
+             <div class="box">
+                <div class="Names">-Daing</div>
+                <div class="image">
+                    <img src="../assets/images/daing.jpg" alt="">
+                    <div class="icons">
+                    <div class="hero-btns">
+                <a href="#" class="btn btn-outline">add to meal</a>
+            </div>
+                </div>
+            </div>
+            <!--footer-->
+        
 </body>
 </html>
