--- a/pages/index.html
+++ b/pages/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Filipino Style Restaurant</title>
     <link rel="stylesheet" href="../assets/styles/style.css">
+    <script src="https://kit.fontawesome.com/184513af59.js" crossorigin="anonymous"></script>
+</head>
 </head>
 <body>
     <nav class="navbar">
@@ -17,7 +19,6 @@
             <li><a href="./index.html">Home</a></li>
             <li><a href="./About.html">About</a></li>
             <li><a href="./Menu.html">Menu</a></li>
-            <li><a href="./Pages.html">Pages</a></li>
             <li><a href="./Contact.html">Contact</a></li>
         </ul>
         </div>
@@ -31,8 +32,8 @@
                 <p>Discover Filipino delectable cusine and unforgetable moments in our welcoming, culinary haven</p>
                 </p>
                 <div class="hero-btns">
-                <a href="#" class="btn">Book a Table</a>
-                <a href="#" class="btn btn-outline">Explore Menu</a>
+                <a href="Reviews.html" class="btn">Reviews</a>
+                <a href="Menu.html" class="btn btn-outline">Explore Menu</a>
             </div>
             </div>
 
@@ -43,7 +44,7 @@
     <section class="Dish">
         <div class="container">
             <div class="dish-content">
-                <h1>Delicious Dishes</h1>
+                <h1>Delicious Filipino Dishes</h1>
                 <div class="line"></div>
             </div>
             <div class="scroll-container">
@@ -99,5 +100,17 @@
 
     </div>
    </section>
+<!--Footer Section-->
+
+<footer>
+        <p>Contact me</p>
+        <p> For more detailes
+        <div id="social">
+            <a href="https://www.facebook.com/pauullyyyy"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com/pauuullyyyy/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://ph.pinterest.com/gianan0603/_profile/"><i class="fa-brands fa-pinterest"></i></a>
+        </div>
+        <p class="end"> All rights reserved</p>
+    </footer>
 </body>
 </html>
