modified:   assets/styles/Dish.css 	new file:   assets/styles/booking.css 	modified:   assets/styles/hero.css 	modified:   assets/styles/navbar.css 	modified:   assets/styles/reviews.css 	new file:   assets/styles/row.css 	modified:   pages/Contact.html 	modified:   pages/Menu.html 	modified:   pages/Reviews.html 	new file:   pages/booking.html 	modified:   pages/index.html

--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="#" class="logo">Cooking Master</a>
+            <a href="#" class="logo">Wow Pare Sarap!!!</a>
         <div class="hamburger">
             <input type="checkbox" id="menu-toggle" class="menu-toggle" />
             <label for="menu-toggle" class="menu-btn">☰</label>
@@ -29,9 +29,6 @@
     <div class="box-container">
 
         <div class="box">
-            <span class="discount">-10%</span>
-            <div class="image">
-                <img src="">
             </div>
         </div>
     </div>
@@ -49,6 +46,7 @@
                 <div class="Names">-Crispy Pata</div>
                 <div class="image">
                     <img src="../assets/images/Crispy Pata.jpg" alt="">
+                    </div>
                     <div class="icons">
                     <div class="hero-btns">
                 <a href="#" class="btn btn-outline">add to meal</a>
