--- a/pages/Reviews.html
+++ b/pages/Reviews.html
@@ -25,124 +25,48 @@
         </div>
     </nav>
 
+    <section class="Dish">
+        <div class="container">
+            <div class="dish-content">
+                <h1>Booking Area</h1>
+                <div class="line"></div>
+            </div>
+
     <!-- Main Content -->
   <main>
-              <section class="review" id="review">
-                    <div class="review-container">
-                        <div class="box">
-                            <div class="stars">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                        </div>
-                        <p> isang kagat, hindi paba ako sapat?</p>
-                        <div class="user">
-                            <img src="/assets/images/christian.jpg" alt="">
-                            <div class="user-info">
-                                <h3>Christian Hope Nuñez</h3>
-                                <span> happy customer</span>
-                            </div>
+    <section id="contact">
+      <div class="container">
+        <h1>Send a Message</h1>
 
-                        </div>
-                        <span class="fas fa-qoute-right"></span>
-                    </div>
+        <form action="./booking.html">
+          <div class="fullname">
+            <div class="form-group">
+              <label for="firstName">First name</label>
+              <input id="firstName" type="text" placeholder="Enter your first name" required>
+            </div>
 
-                    <div class="box">
-                            <div class="stars">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                        </div>
-                        <p> Bahoa ani boss uy, baho'g kuwang</p>
-                        <div class="user">
-                            <img src="/assets/images/sergs.jpg" alt="">
-                            <div class="user-info">
-                                <h3>Sergs Anthony Rebleza</h3>
-                                <span> happy customer</span>
-                            </div>
+            <div class="form-group">
+              <label for="lastName">Last name</label>
+              <input id="lastName" type="text" placeholder="Enter your last name" required>
+            </div>
+          </div>
 
-                        </div>
-                        <span class="fas fa-qoute-right"></span>
-                    </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input id="email" type="email" placeholder="Enter your email address" required>
+          </div>
 
-                    <div class="box">
-                            <div class="stars">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                        </div>
-                        <p> you want this do this</p>
-                        <div class="user">
-                            <img src="/assets/images/miguel.jpg" alt="">
-                            <div class="user-info">
-                                <h3>Miguel Carillo</h3>
-                                <span> happy customer</span>
-                            </div>
+          <div class="form-group">
+            <label for="subject">Subject</label>
+            <input id="subject" type="text" placeholder="Email subject" required>
+          </div>
 
-                        </div>
-                        <span class="fas fa-qoute-right"></span>
-                    </div>
+          <div class="form-group">
+            <label for="message">Message</label>
+            <textarea id="message" placeholder="Enter your message..." required></textarea>
+          </div>
 
-                    <div class="box">
-                            <div class="stars">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                        </div>
-                        <p> solida aning crispy pata paul ay mka tug mn tas kalami</p>
-                        <div class="user">
-                            <img src="/assets/images/emman.jpg" alt="">
-                            <div class="user-info">
-                                <h3>Christian Hope Nuñez</h3>
-                                <span> Emman Ceniza</span>
-                            </div>
-
-                        </div>
-                        <span class="fas fa-qoute-right"></span>
-                    </div>
-
-                    <div class="box">
-                            <div class="stars">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                        </div>
-                        <p> 5 star ky gikan libre</p>
-                        <div class="user">
-                            <img src="/assets/images/janlo.jpg" alt="">
-                            <div class="user-info">
-                                <h3>John Lourenz Dico</h3>
-                                <span> happy customer</span>
-                            </div>
-
-                        </div>
-                        <span class="fas fa-qoute-right"></span>
-                    </div>
-
-                    </section>
-  </main>
-
+          <a href="./booking.html" class="btn">add booking</a>
+        </form>
 <!--Footer Section-->
 
-<footer>
-        <p>Contact me</p>
-        <p> For more detailes
-        <div id="social">
-            <a href="https://www.facebook.com/pauullyyyy"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://www.instagram.com/pauuullyyyy/"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://ph.pinterest.com/gianan0603/_profile/"><i class="fa-brands fa-pinterest"></i></a>
-        </div>
-        <p class="end"> All rights reserved</p>
-    </footer>
-</body>
-</html>
