--- a/pages/index.html
+++ b/pages/index.html
@@ -32,7 +32,7 @@
                 <p>Discover Filipino delectable cusine and unforgetable moments in our welcoming, culinary haven</p>
                 </p>
                 <div class="hero-btns">
-                <a href="Reviews.html" class="btn">Reviews</a>
+                <a href="Reviews.html" class="btn">Book a Table</a>
                 <a href="Menu.html" class="btn btn-outline">Explore Menu</a>
             </div>
             </div>
