--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="#" class="logo">Cooking Master</a>
+            <a href="#" class="logo">Wow Pare Sarap!!!</a>
         <div class="hamburger">
             <input type="checkbox" id="menu-toggle" class="menu-toggle" />
             <label for="menu-toggle" class="menu-btn">☰</label>
