modified:   assets/styles/about.css 	modified:   assets/styles/navbar.css 	deleted:    assets/styles/reviews.css 	modified:   assets/styles/style.css 	modified:   pages/About.html

--- a/pages/About.html
+++ b/pages/About.html
@@ -31,7 +31,7 @@
     <div class="box-container">
 
         <div class="box">
-            <span class="discount">-10%</span>
+            <span class="discount"></span>
             <div class="image">
                 <img src="">
             </div>
@@ -39,9 +39,9 @@
     </div>
    </section>
     <!-- Dishes Section-->
-    <section class="Dish">
+    <section class="about">
         <div class="container">
-            <div class="dish-content">
+            <div class="about-content">
                 <h1>Why Choose Us?</h1>
                 <div class="line"></div>
                 
